; ModuleID = '/home/carl/AnghaBench/openssl/providers/implementations/macs/extr_poly1305_prov.c_poly1305_final.c'
source_filename = "/home/carl/AnghaBench/openssl/providers/implementations/macs/extr_poly1305_prov.c_poly1305_final.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.poly1305_data_st = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i64*, i64)* @poly1305_final to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @poly1305_final(i8* %0, i8* %1, i64* %2, i64 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.poly1305_data_st*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64* %2, i64** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.poly1305_data_st*
  store %struct.poly1305_data_st* %11, %struct.poly1305_data_st** %9, align 8
  %12 = load %struct.poly1305_data_st*, %struct.poly1305_data_st** %9, align 8
  %13 = getelementptr inbounds %struct.poly1305_data_st, %struct.poly1305_data_st* %12, i32 0, i32 0
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 @Poly1305_Final(i32* %13, i8* %14)
  ret i32 1
}

declare dso_local i32 @Poly1305_Final(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
